Add /books/memo/{id} patch API and memo column in Books table
