# packages/server/src/books/dtos/createBookSelfDto.ts
@@ -1,6 +1,5 @@
 import { ApiProperty } from '@nestjs/swagger';
 import { IsNotEmpty } from 'class-validator';
-import { Status, statusValues } from '../book.entity';
 
 export class CreateBookSelfDto {
   @ApiProperty({ description: '書籍名' })
@@ -14,19 +13,4 @@ export class CreateBookSelfDto {
   @ApiProperty({ description: '出版社名' })
   @IsNotEmpty()
   publisher: string;
-
-  @ApiProperty({
-    description: '読書状態 1: 未読 2: 読書中 3: 読了 4: 中断',
-    enum: statusValues,
-  })
-  @IsNotEmpty()
-  status: Status;
-
-  @ApiProperty({ description: 'カテゴリー' })
-  @IsNotEmpty()
-  category: number;
-
-  @ApiProperty({ description: '画像パス' })
-  @IsNotEmpty()
-  image_path: string;
 }
