# packages/server/src/books/dtos/patchBookMemoDto.ts
@@ -1,0 +1,6 @@
+import { ApiProperty } from '@nestjs/swagger';
+
+export class PatchBookMemoDto {
+  @ApiProperty({ description: 'メモ' })
+  memo: string;
+}
